tests/negative/gold/capture_block_test.gold
tests/negative/capture_block_test.toit:7:5: error: Unresolved identifier: 'unresolved'
    unresolved
    ^~~~~~~~~~
tests/negative/capture_block_test.toit:5:13: error: Can't capture block variable b
  lambda := ::
            ^
tests/negative/capture_block_test.toit:8:15: error: Unresolved identifier: 'unresolved'
  lambda.call unresolved
              ^~~~~~~~~~
Compilation failed.
